Redesign of UI.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
    <div class="container">
       <h1>Тестовое задание</h1>
+      <ul class="wrapper">
+         <div class="lines"></div>
+         
+      </ul>
    </div>
    <script src="js/main.js"></script>
 </body>
