Upd Logic and HTML
1) Зарефакторил общую структуру таблицы. (так все-таки удобнее)
2) Добавил сортировку по тэгу 'table head'.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
    <div class="container">
       <h1>Тестовое задание</h1>
-      <ul class="wrapper">
+      <table class="wrapper">
          <div class="lines"></div>
-         
-      </ul>
+      </table>
    </div>
    <script src="js/main.js"></script>
 </body>
