--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
    <title>Тестовое задание</title>
    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
    <div class="container">
       <h1>Тестовое задание</h1>
+      <button class = "add-row-btn" type="submit">+</button>
       <table class="wrapper">
          <div class="lines"></div>
       </table>
-   </div>
-   <script src="js/main.js"></script>
+      <script src="js/main.js"></script>
+     
 </body>
 </html>
